--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div>v</div>
       </div>
     </div>
-    <div>kanan</div>
+    <div>kanan kirm</div>
 
     <div id="10 " class="flex justify-between items-center px-[129px]">
       <img src="logo.png" />
@@ -95,7 +95,7 @@
       <div class="hover:bg-yellow-400">rohman</div>
       <div class="hover:bg-blue-950">hasan</div>
       <button class="bg-blue-950 text-red-600 px-4 py-3 rounded-xl">
-        habib
+        habibbul
       </button>
       <div class="hover:bg-green-500">yasin</div>
     </div>
