--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <button
           class="border border-black hover:bg-red-600 hover:text-white rounded-full px-10 py-3"
         >
-          login dang
+          login dang dong
         </button>
         <img src="shopping-bag.png" alt="" class="w-[24px] h-[24px]" />
       </div>
